--- a/package.json
+++ b/package.json
@@ -1,15 +1,61 @@
 {
-  "name": "nodejs",
+  "name": "frontend-holisticos",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
+  "homepage": ".",
   "dependencies": {
-    "@types/node": "^22.13.11"
+    "@emailjs/browser": "^4.4.1",
+    "@mercadopago/sdk-react": "^1.0.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "browser-image-compression": "^2.0.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "express": "^5.1.0",
+    "framer-motion": "^12.18.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
+    "mercadopago": "^2.8.0",
+    "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
+    "pusher-js": "^8.4.0",
+    "react": "^18.3.1",
+    "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.4.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
+    "react-swipeable": "^7.0.2",
+    "react-time-picker": "^7.0.0",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "concurrently": "^9.2.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "postbuild": "cp vercel.json build/",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
